Fixing static page alignment. Adjusting dimensions when zooming.

--- a/GraphicalInterface/css/temp-style.css
+++ b/GraphicalInterface/css/temp-style.css
@@ -167,8 +167,9 @@
 
 .graph-display {
     background-color: var(--primary-white);
-    width: 1000px;
-    height: 600px;
+    width: 60vh;
+    /*height: 100%;*/
+    height: 50vh;
     border-style: double;
     border-color: rgb(12, 14, 116);
     border-width: 5px;
@@ -179,8 +180,8 @@
 .prob-dist-chart-container {
     display: flex;
     background-color: rgb(188, 176, 221);
-    width: 1000px;
-    height: 595px;
+    width: 60vh;
+    height: 50vh;
     margin-top: 35px;
     border-style: double;
     border-color: var(--primary-dark);
